// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Paginator ColorThemePrimary smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-paginator role="group"
                 class="mat-mdc-paginator"
                 ng-reflect-page-size="10"
                 ng-reflect-length="50"
                 ng-reflect-page-index="0"
                 ng-reflect-page-size-options="10,20,30"
                 ng-reflect-hide-page-size="false"
                 ng-reflect-show-first-last-buttons="true"
                 ng-reflect-disabled="false"
                 ng-reflect-color="primary"
  >
    <div class="mat-mdc-paginator-outer-container">
      <div class="mat-mdc-paginator-container">
        <div class="mat-mdc-paginator-page-size ng-star-inserted">
          <div class="mat-mdc-paginator-page-size-label"
               id="mat-paginator-page-size-label-2"
          >
            Items per page:
          </div>
          <mat-form-field class="mat-mdc-form-field mat-mdc-paginator-page-size-select ng-tns-c13-0 mat-mdc-form-field-type-mat-select mat-form-field-appearance-outline mat-primary ng-star-inserted"
                          ng-reflect-appearance="outline"
                          ng-reflect-color="primary"
          >
            <div class="mat-mdc-text-field-wrapper mdc-text-field ng-tns-c13-0 mdc-text-field--outlined mdc-text-field--no-label">
              <div class="mat-mdc-form-field-flex ng-tns-c13-0">
                <div matformfieldnotchedoutline
                     class="mdc-notched-outline ng-tns-c13-0 mdc-notched-outline--no-label ng-star-inserted mdc-notched-outline--notched"
                     ng-reflect-open="true"
                     ng-reflect-label-width="0"
                >
                  <div class="mdc-notched-outline__leading">
                  </div>
                  <div class="mdc-notched-outline__notch"
                       style="width: 0px;"
                  >
                  </div>
                  <div class="mdc-notched-outline__trailing">
                  </div>
                </div>
                <div class="mat-mdc-form-field-infix ng-tns-c13-0">
                  <mat-select role="combobox"
                              aria-autocomplete="none"
                              aria-haspopup="listbox"
                              hidesingleselectionindicator
                              class="mat-mdc-select ng-tns-c14-1 ng-tns-c13-0 ng-star-inserted"
                              ng-reflect-hide-single-selection-indicator
                              ng-reflect-value="10"
                              ng-reflect-disabled="false"
                              ng-reflect-aria-labelledby="mat-paginator-page-size-label-"
                              ng-reflect-panel-class
                              aria-labelledby="mat-select-value-3 mat-paginator-page-size-label-2"
                              id="mat-select-2"
                              tabindex="0"
                              aria-expanded="false"
                              aria-required="false"
                              aria-disabled="false"
                              aria-invalid="false"
                  >
                    <div cdk-overlay-origin
                         class="mat-mdc-select-trigger ng-tns-c14-1"
                    >
                      <div class="mat-mdc-select-value ng-tns-c14-1"
                           ng-reflect-ng-switch="false"
                           id="mat-select-value-3"
                      >
                        <span class="mat-mdc-select-value-text ng-tns-c14-1 ng-star-inserted"
                              ng-reflect-ng-switch="false"
                        >
                          <span class="mat-mdc-select-min-line ng-tns-c14-1 ng-star-inserted">
                            10
                          </span>
                        </span>
                      </div>
                      <div class="mat-mdc-select-arrow-wrapper ng-tns-c14-1">
                        <div class="mat-mdc-select-arrow ng-tns-c14-1">
                          <svg viewbox="0 0 24 24"
                               width="24px"
                               height="24px"
                               focusable="false"
                               class="ng-tns-c14-1"
                          >
                            <path d="M7 10l5 5 5-5z"
                                  class="ng-tns-c14-1"
                            >
                            </path>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </mat-select>
                </div>
              </div>
            </div>
            <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ng-tns-c13-0"
                 ng-reflect-ng-switch="hint"
            >
              <div class="mat-mdc-form-field-hint-wrapper ng-tns-c13-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
                   style="opacity: 1; transform: translateY(0%);"
              >
                <div class="mat-mdc-form-field-hint-spacer ng-tns-c13-0">
                </div>
              </div>
            </div>
          </mat-form-field>
        </div>
        <div class="mat-mdc-paginator-range-actions">
          <div aria-live="polite"
               class="mat-mdc-paginator-range-label"
          >
            1 – 10 of 50
          </div>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="First page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="First page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-previous mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Previous page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Previous page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-next mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Next page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Next page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-last mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="Last page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Last page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
        </div>
      </div>
    </div>
  </mat-paginator>
</storybook-root>
`;

exports[`Components/Paginator Default smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-paginator role="group"
                 class="mat-mdc-paginator"
                 ng-reflect-page-size="10"
                 ng-reflect-length="50"
                 ng-reflect-page-index="0"
                 ng-reflect-page-size-options="10,20,30"
                 ng-reflect-hide-page-size="false"
                 ng-reflect-show-first-last-buttons="true"
                 ng-reflect-disabled="false"
  >
    <div class="mat-mdc-paginator-outer-container">
      <div class="mat-mdc-paginator-container">
        <div class="mat-mdc-paginator-page-size ng-star-inserted">
          <div class="mat-mdc-paginator-page-size-label"
               id="mat-paginator-page-size-label-0"
          >
            Items per page:
          </div>
          <mat-form-field class="mat-mdc-form-field mat-mdc-paginator-page-size-select ng-tns-c13-0 mat-mdc-form-field-type-mat-select mat-form-field-appearance-outline mat-primary ng-star-inserted"
                          ng-reflect-appearance="outline"
          >
            <div class="mat-mdc-text-field-wrapper mdc-text-field ng-tns-c13-0 mdc-text-field--outlined mdc-text-field--no-label">
              <div class="mat-mdc-form-field-flex ng-tns-c13-0">
                <div matformfieldnotchedoutline
                     class="mdc-notched-outline ng-tns-c13-0 mdc-notched-outline--no-label ng-star-inserted mdc-notched-outline--notched"
                     ng-reflect-open="true"
                     ng-reflect-label-width="0"
                >
                  <div class="mdc-notched-outline__leading">
                  </div>
                  <div class="mdc-notched-outline__notch"
                       style="width: 0px;"
                  >
                  </div>
                  <div class="mdc-notched-outline__trailing">
                  </div>
                </div>
                <div class="mat-mdc-form-field-infix ng-tns-c13-0">
                  <mat-select role="combobox"
                              aria-autocomplete="none"
                              aria-haspopup="listbox"
                              hidesingleselectionindicator
                              class="mat-mdc-select ng-tns-c14-1 ng-tns-c13-0 ng-star-inserted"
                              ng-reflect-hide-single-selection-indicator
                              ng-reflect-value="10"
                              ng-reflect-disabled="false"
                              ng-reflect-aria-labelledby="mat-paginator-page-size-label-"
                              ng-reflect-panel-class
                              aria-labelledby="mat-select-value-1 mat-paginator-page-size-label-0"
                              id="mat-select-0"
                              tabindex="0"
                              aria-expanded="false"
                              aria-required="false"
                              aria-disabled="false"
                              aria-invalid="false"
                  >
                    <div cdk-overlay-origin
                         class="mat-mdc-select-trigger ng-tns-c14-1"
                    >
                      <div class="mat-mdc-select-value ng-tns-c14-1"
                           ng-reflect-ng-switch="false"
                           id="mat-select-value-1"
                      >
                        <span class="mat-mdc-select-value-text ng-tns-c14-1 ng-star-inserted"
                              ng-reflect-ng-switch="false"
                        >
                          <span class="mat-mdc-select-min-line ng-tns-c14-1 ng-star-inserted">
                            10
                          </span>
                        </span>
                      </div>
                      <div class="mat-mdc-select-arrow-wrapper ng-tns-c14-1">
                        <div class="mat-mdc-select-arrow ng-tns-c14-1">
                          <svg viewbox="0 0 24 24"
                               width="24px"
                               height="24px"
                               focusable="false"
                               class="ng-tns-c14-1"
                          >
                            <path d="M7 10l5 5 5-5z"
                                  class="ng-tns-c14-1"
                            >
                            </path>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </mat-select>
                </div>
              </div>
            </div>
            <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ng-tns-c13-0"
                 ng-reflect-ng-switch="hint"
            >
              <div class="mat-mdc-form-field-hint-wrapper ng-tns-c13-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
                   style="opacity: 1; transform: translateY(0%);"
              >
                <div class="mat-mdc-form-field-hint-spacer ng-tns-c13-0">
                </div>
              </div>
            </div>
          </mat-form-field>
        </div>
        <div class="mat-mdc-paginator-range-actions">
          <div aria-live="polite"
               class="mat-mdc-paginator-range-label"
          >
            1 – 10 of 50
          </div>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="First page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="First page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-previous mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Previous page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Previous page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-next mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Next page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Next page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-last mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="Last page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Last page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
        </div>
      </div>
    </div>
  </mat-paginator>
</storybook-root>
`;

exports[`Components/Paginator Disabled smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-paginator role="group"
                 class="mat-mdc-paginator"
                 ng-reflect-page-size="10"
                 ng-reflect-length="50"
                 ng-reflect-page-index="0"
                 ng-reflect-page-size-options="10,20,30"
                 ng-reflect-hide-page-size="false"
                 ng-reflect-show-first-last-buttons="true"
                 ng-reflect-disabled="true"
  >
    <div class="mat-mdc-paginator-outer-container">
      <div class="mat-mdc-paginator-container">
        <div class="mat-mdc-paginator-page-size ng-star-inserted">
          <div class="mat-mdc-paginator-page-size-label"
               id="mat-paginator-page-size-label-5"
          >
            Items per page:
          </div>
          <mat-form-field class="mat-mdc-form-field mat-mdc-paginator-page-size-select ng-tns-c13-0 mat-mdc-form-field-type-mat-select mat-form-field-disabled mat-form-field-appearance-outline mat-primary ng-star-inserted"
                          ng-reflect-appearance="outline"
          >
            <div class="mat-mdc-text-field-wrapper mdc-text-field ng-tns-c13-0 mdc-text-field--outlined mdc-text-field--no-label mdc-text-field--disabled">
              <div class="mat-mdc-form-field-flex ng-tns-c13-0">
                <div matformfieldnotchedoutline
                     class="mdc-notched-outline ng-tns-c13-0 mdc-notched-outline--no-label ng-star-inserted mdc-notched-outline--notched"
                     ng-reflect-open="true"
                     ng-reflect-label-width="0"
                >
                  <div class="mdc-notched-outline__leading">
                  </div>
                  <div class="mdc-notched-outline__notch"
                       style="width: 0px;"
                  >
                  </div>
                  <div class="mdc-notched-outline__trailing">
                  </div>
                </div>
                <div class="mat-mdc-form-field-infix ng-tns-c13-0">
                  <mat-select role="combobox"
                              aria-autocomplete="none"
                              aria-haspopup="listbox"
                              hidesingleselectionindicator
                              class="mat-mdc-select ng-tns-c14-1 ng-tns-c13-0 mat-mdc-select-disabled ng-star-inserted"
                              ng-reflect-hide-single-selection-indicator
                              ng-reflect-value="10"
                              ng-reflect-disabled="true"
                              ng-reflect-aria-labelledby="mat-paginator-page-size-label-"
                              ng-reflect-panel-class
                              aria-labelledby="mat-select-value-9 mat-paginator-page-size-label-5"
                              id="mat-select-8"
                              tabindex="-1"
                              aria-expanded="false"
                              aria-required="false"
                              aria-disabled="true"
                              aria-invalid="false"
                  >
                    <div cdk-overlay-origin
                         class="mat-mdc-select-trigger ng-tns-c14-1"
                    >
                      <div class="mat-mdc-select-value ng-tns-c14-1"
                           ng-reflect-ng-switch="false"
                           id="mat-select-value-9"
                      >
                        <span class="mat-mdc-select-value-text ng-tns-c14-1 ng-star-inserted"
                              ng-reflect-ng-switch="false"
                        >
                          <span class="mat-mdc-select-min-line ng-tns-c14-1 ng-star-inserted">
                            10
                          </span>
                        </span>
                      </div>
                      <div class="mat-mdc-select-arrow-wrapper ng-tns-c14-1">
                        <div class="mat-mdc-select-arrow ng-tns-c14-1">
                          <svg viewbox="0 0 24 24"
                               width="24px"
                               height="24px"
                               focusable="false"
                               class="ng-tns-c14-1"
                          >
                            <path d="M7 10l5 5 5-5z"
                                  class="ng-tns-c14-1"
                            >
                            </path>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </mat-select>
                </div>
              </div>
            </div>
            <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ng-tns-c13-0"
                 ng-reflect-ng-switch="hint"
            >
              <div class="mat-mdc-form-field-hint-wrapper ng-tns-c13-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
                   style="opacity: 1; transform: translateY(0%);"
              >
                <div class="mat-mdc-form-field-hint-spacer ng-tns-c13-0">
                </div>
              </div>
            </div>
          </mat-form-field>
        </div>
        <div class="mat-mdc-paginator-range-actions">
          <div aria-live="polite"
               class="mat-mdc-paginator-range-label"
          >
            1 – 10 of 50
          </div>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="First page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="First page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-previous mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Previous page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Previous page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-next mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Next page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Next page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-last mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="Last page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Last page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
        </div>
      </div>
    </div>
  </mat-paginator>
</storybook-root>
`;

exports[`Components/Paginator HidePageSize smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-paginator role="group"
                 class="mat-mdc-paginator"
                 ng-reflect-page-size="10"
                 ng-reflect-length="50"
                 ng-reflect-page-index="0"
                 ng-reflect-page-size-options="10,20,30"
                 ng-reflect-hide-page-size="true"
                 ng-reflect-show-first-last-buttons="true"
                 ng-reflect-disabled="false"
  >
    <div class="mat-mdc-paginator-outer-container">
      <div class="mat-mdc-paginator-container">
        <div class="mat-mdc-paginator-range-actions">
          <div aria-live="polite"
               class="mat-mdc-paginator-range-label"
          >
            1 – 10 of 50
          </div>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="First page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="First page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-previous mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Previous page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Previous page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-next mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Next page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Next page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-last mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Last page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Last page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
        </div>
      </div>
    </div>
  </mat-paginator>
</storybook-root>
`;

exports[`Components/Paginator PageIndex smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-paginator role="group"
                 class="mat-mdc-paginator"
                 ng-reflect-page-size="10"
                 ng-reflect-length="50"
                 ng-reflect-page-index="1"
                 ng-reflect-page-size-options="10,20,30"
                 ng-reflect-hide-page-size="false"
                 ng-reflect-show-first-last-buttons="true"
                 ng-reflect-disabled="false"
  >
    <div class="mat-mdc-paginator-outer-container">
      <div class="mat-mdc-paginator-container">
        <div class="mat-mdc-paginator-page-size ng-star-inserted">
          <div class="mat-mdc-paginator-page-size-label"
               id="mat-paginator-page-size-label-3"
          >
            Items per page:
          </div>
          <mat-form-field class="mat-mdc-form-field mat-mdc-paginator-page-size-select ng-tns-c13-0 mat-mdc-form-field-type-mat-select mat-form-field-appearance-outline mat-primary ng-star-inserted"
                          ng-reflect-appearance="outline"
          >
            <div class="mat-mdc-text-field-wrapper mdc-text-field ng-tns-c13-0 mdc-text-field--outlined mdc-text-field--no-label">
              <div class="mat-mdc-form-field-flex ng-tns-c13-0">
                <div matformfieldnotchedoutline
                     class="mdc-notched-outline ng-tns-c13-0 mdc-notched-outline--no-label ng-star-inserted mdc-notched-outline--notched"
                     ng-reflect-open="true"
                     ng-reflect-label-width="0"
                >
                  <div class="mdc-notched-outline__leading">
                  </div>
                  <div class="mdc-notched-outline__notch"
                       style="width: 0px;"
                  >
                  </div>
                  <div class="mdc-notched-outline__trailing">
                  </div>
                </div>
                <div class="mat-mdc-form-field-infix ng-tns-c13-0">
                  <mat-select role="combobox"
                              aria-autocomplete="none"
                              aria-haspopup="listbox"
                              hidesingleselectionindicator
                              class="mat-mdc-select ng-tns-c14-1 ng-tns-c13-0 ng-star-inserted"
                              ng-reflect-hide-single-selection-indicator
                              ng-reflect-value="10"
                              ng-reflect-disabled="false"
                              ng-reflect-aria-labelledby="mat-paginator-page-size-label-"
                              ng-reflect-panel-class
                              aria-labelledby="mat-select-value-5 mat-paginator-page-size-label-3"
                              id="mat-select-4"
                              tabindex="0"
                              aria-expanded="false"
                              aria-required="false"
                              aria-disabled="false"
                              aria-invalid="false"
                  >
                    <div cdk-overlay-origin
                         class="mat-mdc-select-trigger ng-tns-c14-1"
                    >
                      <div class="mat-mdc-select-value ng-tns-c14-1"
                           ng-reflect-ng-switch="false"
                           id="mat-select-value-5"
                      >
                        <span class="mat-mdc-select-value-text ng-tns-c14-1 ng-star-inserted"
                              ng-reflect-ng-switch="false"
                        >
                          <span class="mat-mdc-select-min-line ng-tns-c14-1 ng-star-inserted">
                            10
                          </span>
                        </span>
                      </div>
                      <div class="mat-mdc-select-arrow-wrapper ng-tns-c14-1">
                        <div class="mat-mdc-select-arrow ng-tns-c14-1">
                          <svg viewbox="0 0 24 24"
                               width="24px"
                               height="24px"
                               focusable="false"
                               class="ng-tns-c14-1"
                          >
                            <path d="M7 10l5 5 5-5z"
                                  class="ng-tns-c14-1"
                            >
                            </path>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </mat-select>
                </div>
              </div>
            </div>
            <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ng-tns-c13-0"
                 ng-reflect-ng-switch="hint"
            >
              <div class="mat-mdc-form-field-hint-wrapper ng-tns-c13-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
                   style="opacity: 1; transform: translateY(0%);"
              >
                <div class="mat-mdc-form-field-hint-spacer ng-tns-c13-0">
                </div>
              </div>
            </div>
          </mat-form-field>
        </div>
        <div class="mat-mdc-paginator-range-actions">
          <div aria-live="polite"
               class="mat-mdc-paginator-range-label"
          >
            11 – 20 of 50
          </div>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="First page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="First page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-previous mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Previous page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Previous page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-next mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Next page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Next page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-last mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="Last page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Last page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
        </div>
      </div>
    </div>
  </mat-paginator>
</storybook-root>
`;

exports[`Components/Paginator SelectConfig smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-paginator role="group"
                 class="mat-mdc-paginator"
                 ng-reflect-page-size="10"
                 ng-reflect-length="50"
                 ng-reflect-page-index="0"
                 ng-reflect-page-size-options="10,20,30"
                 ng-reflect-hide-page-size="false"
                 ng-reflect-show-first-last-buttons="true"
                 ng-reflect-disabled="false"
                 ng-reflect-select-config="[object Object]"
  >
    <div class="mat-mdc-paginator-outer-container">
      <div class="mat-mdc-paginator-container">
        <div class="mat-mdc-paginator-page-size ng-star-inserted">
          <div class="mat-mdc-paginator-page-size-label"
               id="mat-paginator-page-size-label-6"
          >
            Items per page:
          </div>
          <mat-form-field class="mat-mdc-form-field mat-mdc-paginator-page-size-select ng-tns-c13-0 mat-mdc-form-field-type-mat-select mat-form-field-appearance-outline mat-primary ng-star-inserted"
                          ng-reflect-appearance="outline"
          >
            <div class="mat-mdc-text-field-wrapper mdc-text-field ng-tns-c13-0 mdc-text-field--outlined mdc-text-field--no-label">
              <div class="mat-mdc-form-field-flex ng-tns-c13-0">
                <div matformfieldnotchedoutline
                     class="mdc-notched-outline ng-tns-c13-0 mdc-notched-outline--no-label ng-star-inserted mdc-notched-outline--notched"
                     ng-reflect-open="true"
                     ng-reflect-label-width="0"
                >
                  <div class="mdc-notched-outline__leading">
                  </div>
                  <div class="mdc-notched-outline__notch"
                       style="width: 0px;"
                  >
                  </div>
                  <div class="mdc-notched-outline__trailing">
                  </div>
                </div>
                <div class="mat-mdc-form-field-infix ng-tns-c13-0">
                  <mat-select role="combobox"
                              aria-autocomplete="none"
                              aria-haspopup="listbox"
                              hidesingleselectionindicator
                              class="mat-mdc-select ng-tns-c14-1 ng-tns-c13-0 ng-star-inserted"
                              ng-reflect-hide-single-selection-indicator
                              ng-reflect-value="10"
                              ng-reflect-disabled="false"
                              ng-reflect-aria-labelledby="mat-paginator-page-size-label-"
                              ng-reflect-panel-class
                              ng-reflect-disable-option-centering="true"
                              aria-labelledby="mat-select-value-11 mat-paginator-page-size-label-6"
                              id="mat-select-10"
                              tabindex="0"
                              aria-expanded="false"
                              aria-required="false"
                              aria-disabled="false"
                              aria-invalid="false"
                  >
                    <div cdk-overlay-origin
                         class="mat-mdc-select-trigger ng-tns-c14-1"
                    >
                      <div class="mat-mdc-select-value ng-tns-c14-1"
                           ng-reflect-ng-switch="false"
                           id="mat-select-value-11"
                      >
                        <span class="mat-mdc-select-value-text ng-tns-c14-1 ng-star-inserted"
                              ng-reflect-ng-switch="false"
                        >
                          <span class="mat-mdc-select-min-line ng-tns-c14-1 ng-star-inserted">
                            10
                          </span>
                        </span>
                      </div>
                      <div class="mat-mdc-select-arrow-wrapper ng-tns-c14-1">
                        <div class="mat-mdc-select-arrow ng-tns-c14-1">
                          <svg viewbox="0 0 24 24"
                               width="24px"
                               height="24px"
                               focusable="false"
                               class="ng-tns-c14-1"
                          >
                            <path d="M7 10l5 5 5-5z"
                                  class="ng-tns-c14-1"
                            >
                            </path>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </mat-select>
                </div>
              </div>
            </div>
            <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ng-tns-c13-0"
                 ng-reflect-ng-switch="hint"
            >
              <div class="mat-mdc-form-field-hint-wrapper ng-tns-c13-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
                   style="opacity: 1; transform: translateY(0%);"
              >
                <div class="mat-mdc-form-field-hint-spacer ng-tns-c13-0">
                </div>
              </div>
            </div>
          </mat-form-field>
        </div>
        <div class="mat-mdc-paginator-range-actions">
          <div aria-live="polite"
               class="mat-mdc-paginator-range-label"
          >
            1 – 10 of 50
          </div>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="First page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="First page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-previous mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Previous page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Previous page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-next mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Next page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Next page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-last mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base ng-star-inserted"
                  ng-reflect-message="Last page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Last page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
        </div>
      </div>
    </div>
  </mat-paginator>
</storybook-root>
`;

exports[`Components/Paginator ShowFirstLastButtons smoke-test 1`] = `
<storybook-root ng-version="15.2.10">
  <mat-paginator role="group"
                 class="mat-mdc-paginator"
                 ng-reflect-page-size="10"
                 ng-reflect-length="50"
                 ng-reflect-page-index="0"
                 ng-reflect-page-size-options="10,20,30"
                 ng-reflect-hide-page-size="false"
                 ng-reflect-show-first-last-buttons="false"
                 ng-reflect-disabled="false"
  >
    <div class="mat-mdc-paginator-outer-container">
      <div class="mat-mdc-paginator-container">
        <div class="mat-mdc-paginator-page-size ng-star-inserted">
          <div class="mat-mdc-paginator-page-size-label"
               id="mat-paginator-page-size-label-4"
          >
            Items per page:
          </div>
          <mat-form-field class="mat-mdc-form-field mat-mdc-paginator-page-size-select ng-tns-c13-0 mat-mdc-form-field-type-mat-select mat-form-field-appearance-outline mat-primary ng-star-inserted"
                          ng-reflect-appearance="outline"
          >
            <div class="mat-mdc-text-field-wrapper mdc-text-field ng-tns-c13-0 mdc-text-field--outlined mdc-text-field--no-label">
              <div class="mat-mdc-form-field-flex ng-tns-c13-0">
                <div matformfieldnotchedoutline
                     class="mdc-notched-outline ng-tns-c13-0 mdc-notched-outline--no-label ng-star-inserted mdc-notched-outline--notched"
                     ng-reflect-open="true"
                     ng-reflect-label-width="0"
                >
                  <div class="mdc-notched-outline__leading">
                  </div>
                  <div class="mdc-notched-outline__notch"
                       style="width: 0px;"
                  >
                  </div>
                  <div class="mdc-notched-outline__trailing">
                  </div>
                </div>
                <div class="mat-mdc-form-field-infix ng-tns-c13-0">
                  <mat-select role="combobox"
                              aria-autocomplete="none"
                              aria-haspopup="listbox"
                              hidesingleselectionindicator
                              class="mat-mdc-select ng-tns-c14-1 ng-tns-c13-0 ng-star-inserted"
                              ng-reflect-hide-single-selection-indicator
                              ng-reflect-value="10"
                              ng-reflect-disabled="false"
                              ng-reflect-aria-labelledby="mat-paginator-page-size-label-"
                              ng-reflect-panel-class
                              aria-labelledby="mat-select-value-7 mat-paginator-page-size-label-4"
                              id="mat-select-6"
                              tabindex="0"
                              aria-expanded="false"
                              aria-required="false"
                              aria-disabled="false"
                              aria-invalid="false"
                  >
                    <div cdk-overlay-origin
                         class="mat-mdc-select-trigger ng-tns-c14-1"
                    >
                      <div class="mat-mdc-select-value ng-tns-c14-1"
                           ng-reflect-ng-switch="false"
                           id="mat-select-value-7"
                      >
                        <span class="mat-mdc-select-value-text ng-tns-c14-1 ng-star-inserted"
                              ng-reflect-ng-switch="false"
                        >
                          <span class="mat-mdc-select-min-line ng-tns-c14-1 ng-star-inserted">
                            10
                          </span>
                        </span>
                      </div>
                      <div class="mat-mdc-select-arrow-wrapper ng-tns-c14-1">
                        <div class="mat-mdc-select-arrow ng-tns-c14-1">
                          <svg viewbox="0 0 24 24"
                               width="24px"
                               height="24px"
                               focusable="false"
                               class="ng-tns-c14-1"
                          >
                            <path d="M7 10l5 5 5-5z"
                                  class="ng-tns-c14-1"
                            >
                            </path>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </mat-select>
                </div>
              </div>
            </div>
            <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ng-tns-c13-0"
                 ng-reflect-ng-switch="hint"
            >
              <div class="mat-mdc-form-field-hint-wrapper ng-tns-c13-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
                   style="opacity: 1; transform: translateY(0%);"
              >
                <div class="mat-mdc-form-field-hint-spacer ng-tns-c13-0">
                </div>
              </div>
            </div>
          </mat-form-field>
        </div>
        <div class="mat-mdc-paginator-range-actions">
          <div aria-live="polite"
               class="mat-mdc-paginator-range-label"
          >
            1 – 10 of 50
          </div>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-previous mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Previous page"
                  ng-reflect-disabled="true"
                  ng-reflect-position="above"
                  aria-label="Previous page"
                  disabled="true"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="true"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
          <button mat-icon-button
                  type="button"
                  class="mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-next mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base"
                  ng-reflect-message="Next page"
                  ng-reflect-disabled="false"
                  ng-reflect-position="above"
                  aria-label="Next page"
          >
            <span class="mat-mdc-button-persistent-ripple mdc-icon-button__ripple">
            </span>
            <svg viewbox="0 0 24 24"
                 focusable="false"
                 class="mat-mdc-paginator-icon"
            >
              <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z">
              </path>
            </svg>
            <span class="mat-mdc-focus-indicator">
            </span>
            <span matripple
                  class="mat-ripple mat-mdc-button-ripple"
                  ng-reflect-disabled="false"
                  ng-reflect-centered="true"
                  ng-reflect-trigger="[object HTMLButtonElement]"
            >
            </span>
            <span class="mat-mdc-button-touch-target">
            </span>
          </button>
        </div>
      </div>
    </div>
  </mat-paginator>
</storybook-root>
`;
